test/test_cases/invalid/semanticErr/function/undefinedCall.s
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:15 -- Variable fun is not defined in this scope
